# rihla

./: .env.example  .gitignore  AGENT_INSTRUCTIONS.md  CLAUDE.md  DESIGN.md  Design_System.md  FEATURE_GUIDE_DETAILED.md  FEATURE_OVERVIEW.md  IMPLEMENTATION_PLAN.md  README.md  SETUP_GUIDE.md  docker-compose.dev.yml  docker-compose.yml  start-dev.bat  stop-dev.bat
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 28a444422e2c_initial_schema.py  ba40d3717b87_add_chat_messages_table.py  c3f8e5a12b01_add_subject_to_sessions.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/core/: auth.py  exceptions.py  logging_config.py  rate_limiter.py  security.py
backend/app/integrations/: firebase_client.py  jitsi_client.py  matrix_client.py  minio_client.py  ollama_client.py  sygnal_client.py
backend/app/ml/: nlp_extractor.py  ranking.py  reliability.py  sentiment.py  vectors.py
backend/app/models/: __init__.py  account.py  admin.py  attendance.py  audit.py  base.py  chat.py  enrolment.py  invite.py  location.py  ml.py  notification.py  parent.py  review.py  session.py  student.py  subject.py  token.py  tutor.py
backend/app/schemas/: account.py  admin.py  attendance.py  auth.py  calendar.py  chat.py  common.py  enrolment.py  invite.py  notification.py  parent.py  (+6 more)
backend/data/: common_passwords.txt  subjects.json
backend/scripts/: create_admin.py  generate_keys.py  import_locations.py  import_subjects.py  seed_dev_data.py  train_model.py
backend/tests/: conftest.py  factories.py
(+413 files in other folders)
